<resources>
    <string name="app_name">AutoGrade</string>

    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="title">AutoGrade</string>
    <string name="email_input_hint">Enter email address</string>
    <string name="input_password_hint">Enter password</string>
    <string name="login_with_google">Login with Google</string>
    <string name="name_text_hint">Enter name</string>
    <string name="register">Register</string>
    <string name="login_here_navigation">Login Here!</string>
    <string name="do_not_have_an_account_yet_register_here">Do not have an account yet? Register here!</string>
    <string name="upload">upload</string>
    <string name="confirm_password">Confirm password</string>
    <string name="button_join">Join</string>
    <string name="button_join_with_qr">Join With QR</string>
    <string name="auto_grade">AutoGrade</string>
    <string name="text_or">Or</string>
    <string name="fill_code">Enter a join code</string>
    <string name="button_make_test">Make Test</string>
    <string name="button_login">Login</string>
    <string name="profil_button">Profil</string>
    <string name="desc_action_profil">Profil Button</string>
    <string name="create_test">Create test</string>
    <string name="enter_title_test">Enter test title</string>
    <string name="enter_duration">Enter duration</string>
    <string name="question">Question</string>
    <string name="add_question">Add question</string>
    <string name="enter_answer_key">Enter answer key</string>
    <string name="enter_question">Enter question </string>
    <string name="test_title">Test Title</string>
    <string name="allow_response">Allow response</string>
    <string name="response">Response</string>
    <string name="int_test_result">100</string>
    <string name="loremn_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="answer">Answer</string>
    <string name="answers">Answers</string>
    <string name="answey_key">Answey key</string>
    <string name="grade">Grade</string>
    <string name="timer">25 : 59</string>
    <string name="enter_answer">Enter your answer</string>
    <string name="username">Username</string>
    <string name="ex_email">email@example.com</string>
    <string name="your_created_test">Your Created Test</string>
    <string name="exam_title">Exam Title</string>
    <string name="exam_title_2">Exam Title 2</string>
    <string name="your_past_test">Your Past Test</string>
    <string name="exam_title_a">Exam Title A</string>
    <string name="minutes">%d Minutes</string>
    <string name="number">%d Questions</string>
    <string name="users">%d Users</string>
    <string name="your_username">Your Username</string>
    <string name="start_test">Start Test</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="nav_register_here">Register here!</string>
    <string name="tv_subtitle">Onlline test application with AI evaluator</string>
    <string name="tv_information">Welcome to Autograde – effortlessly grade tests with advanced machine learning.</string>
    <string name="tv_information2">Empower your teaching and learning journey with real-time, automated grading</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="previous">Previous</string>
    <string name="create_test_confrimation">Create Test?</string>
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="start_test_confirmation">Start test?</string>
    <string name="home">Home</string>
    <string name="finish_test_confirmation">Finish test?</string>
    <string name="number_of_question">1</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="exit_confirmation">Exit now?</string>
    <string name="logout_confirmation">Logout now?</string>
    <string name="duration">Duration :</string>
    <string name="show_qr_code">Show QR code</string>
    <string name="view_all">View all</string>
    <string name="view_less">View less</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>