<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="158dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/auto_grade"
        android:textSize="40sp"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_subtitle"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/ivPlaceholder"
        android:layout_width="293dp"
        android:layout_height="477dp"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_screen"
        app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_information"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ivPlaceholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_information">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_skip"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="103dp"
            android:layout_height="51dp"
            android:layout_marginStart="22dp"
            android:text="@string/skip"
            android:textColor="@color/primary"
            app:cornerRadius="10dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp"
            android:visibility="visible"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="103dp"
            android:layout_height="51dp"
            android:layout_marginEnd="22dp"
            android:backgroundTint="@color/primary"
            android:text="@string/next"
            app:cornerRadius="10dp"
            android:visibility="visible"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>