<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white">

        <Button
            android:id="@+id/make_test_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="109dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:backgroundTint="@color/white"
            android:text="@string/button_make_test"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/primary"
            app:cornerRadius="10dp" />

        <ImageButton
            android:id="@+id/action_profil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/desc_action_profil"
            android:src="@drawable/icon_profil"
            tools:ignore="RedundantDescriptionCheck"
            tools:layout_editor_absoluteX="351dp"
            tools:layout_editor_absoluteY="7dp" />
    </com.google.android.material.appbar.MaterialToolbar>


    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="194dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/auto_grade"
        android:textAppearance="?attr/textAppearanceHeadlineMedium"
        android:textColor="#001F4C"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/codeEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="70dp"
        android:visibility="visible"
        app:boxStrokeColor="@color/primary"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/fill_code"
            android:visibility="visible"
            tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/join_button"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="444dp"
        android:backgroundTint="#001F4C"
        android:text="@string/button_join"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/text_or"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join_button" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/qr_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:text="@string/button_join_with_qr"
        android:textColor="@color/primary"
        android:visibility="visible"
        app:cornerRadius="10dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_text"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>
