<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="170dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/title"
        android:textColor="@color/primary"
        android:textSize="40sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/email"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/emailEditTextLayout"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/password"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="@id/passwordEditTextLayout"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLayout" />

    <TextView
        android:id="@+id/tv_or"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="Or"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/do_not_have_an_account_yet_register_here"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/googleButton"
        app:layout_constraintHorizontal_bias="0.5"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="52dp"
        android:visibility="visible"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        app:shapeAppearanceOverlay="@style/ShapeAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email_input_hint"
            android:inputType="textEmailAddress"
            android:visibility="visible"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="52dp"
        app:boxStrokeColor="@color/primary"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordTextView"
        app:shapeAppearanceOverlay="@style/ShapeAppearance"
        app:endIconMode="password_toggle">

        <com.example.autograde.EditTextCustom
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/input_password_hint"
            android:fontFamily="@font/roboto_regular"
            android:paddingStart="10dp"
            android:textSize="14sp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        app:shapeAppearanceOverlay="@style/ShapeAppearance" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleButton"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_with_google"
        android:textColor="@color/primary"
        android:textSize="14sp"
        android:visibility="visible"
        app:iconPadding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_or" />


</androidx.constraintlayout.widget.ConstraintLayout>