<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/baseline_arrow_back_24" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="230dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_user_foreground" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/quicksand_bold"
                android:text="@string/username"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_email"
                android:textAlignment="center"
                android:textSize="17sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/roboto_regular"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:textSize="17sp"
                android:text="@string/your_created_test"
                android:textColor="@color/primary"
                android:layout_marginStart="20sp"
                android:visibility="visible"
                android:fontFamily="@font/quicksand_bold"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exam_title"
                android:textSize="19sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:background="@drawable/line_exam_title"
                android:padding="20dp"
                android:visibility="visible"
                android:layout_marginTop="7dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"/>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exam_title_2"
                android:textSize="19sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:background="@drawable/line_exam_title"
                android:padding="20dp"
                android:visibility="visible"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/your_past_test"
                android:textSize="17sp"
                android:textColor="@color/primary"
                android:layout_marginStart="20sp"
                android:visibility="visible"
                android:fontFamily="@font/quicksand_bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exam_title_a"
                android:textSize="19sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:background="@drawable/line_exam_title"
                android:padding="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exam_title"
                android:textSize="19sp"
                android:textColor="@color/primary"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold"
                android:background="@drawable/line_exam_title"
                android:padding="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:visibility="visible"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:layout_marginEnd="80dp"
                android:layout_marginStart="80dp"
                android:text="@string/logout"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:textStyle="bold"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:padding="12dp"
                app:cornerRadius="10dp"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>